change ship partner type display

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -68,7 +68,7 @@
         <ion-radio slot="start" [value]="'normal'"></ion-radio>
       </ion-item>
       <ion-item>
-        <ion-label>Giao nhanh</ion-label>
+        <ion-label>Hoả tốc</ion-label>
         <ion-radio slot="start" [value]="'fast'"></ion-radio>
       </ion-item>
     </ion-row>
