--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -56,7 +56,7 @@
       <ion-item>
         <ion-select label="Default label" placeholder="Đơn vị vận chuyển" [(ngModel)]="shipPartner" (ionChange)="onShipPartnerChange($event)">
           <ion-select-option value="taikho">Nhận hàng tại kho</ion-select-option>
-          <ion-select-option value="ghtk">Giao hàng tiết kiệm</ion-select-option>
+          <!-- <ion-select-option value="ghtk">Giao hàng tiết kiệm</ion-select-option> -->
           <ion-select-option value="viettel">Viettel post</ion-select-option>
           <!-- <ion-select-option value="vnpost">VN post</ion-select-option> -->
         </ion-select>
