--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <ion-app>
   <ion-split-pane contentId="content">
-    <ion-menu type="push" contentId="content">
+    <ion-menu contentId="content">
       <ion-header>
         <ion-toolbar color="mytheme">
           <ion-row *ngIf="user" class="ion-padding-horizontal ion-align-items-center">
