hide input reference

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -121,12 +121,12 @@
       </ion-row>
 
     </ion-radio-group>
-    <ion-row *ngIf="isShowReference">
+    <!-- <ion-row *ngIf="isShowReference">
       <ion-col>
         <ion-input placeholder="Mã chuyển khoản" [(ngModel)]="reference"
           class="input ion-padding-horizontal"></ion-input>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-list>
 
   <!-- <ion-list class="ion-no-margin">
