ignore qtyAvailable for promotion product

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -52,7 +52,7 @@
                 <div class="d-flex ion-justify-content-between ion-align-items-center cart-pro-quantity" [ngClass]="avaiableQty(item.product) ? '' : 'disabled hidden'">
                   <!-- <div class="font-small">Số lượng:</div> -->
                   <div class="ion-text-right font-weight-bold d-flex ion-justify-content-between ion-align-items-center" style="display: flex;">
-                    <app-quantity-input [quantityValue]="item.quantity" [disabled]="!avaiableQty(item.product)" (outputQty)="getQty($event, item)" [max]="item.product.qtyAvailable || (item.product.categoryOdooId === 40 && 10000)">
+                    <app-quantity-input [quantityValue]="item.quantity" [disabled]="!avaiableQty(item.product)" (outputQty)="getQty($event, item)" [max]="(item.product.categoryOdooId !== 40 && item.product.qtyAvailable) || (item.product.categoryOdooId === 40 && 10000)">
                     </app-quantity-input>
                     <ion-text color="danger" class="small" (click)="remove(item, j)">Xoá</ion-text>
                   </div>
