--- a/src/app/privacy-policy/privacy-policy.page.html
+++ b/src/app/privacy-policy/privacy-policy.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Chính Sách Bảo Mật</ion-title>
+    <ion-title>Privacy Policy</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
   <ion-card>
     <ion-card-header>
       <ion-card-title>CHÍNH SÁCH BẢO MẬT THÔNG TIN CÁ NHÂN</ion-card-title>
@@ -12,62 +12,38 @@
     <ion-card-content>
       <p>Harumart đưa ra chính sách bảo mật thông tin cá nhân như sau:</p>
 
-      <ol>
-        <li>
-          Thông tin cá nhân của Thành viên trên website được chúng tôi cam kết bảo mật tuyệt đối theo chính sách bảo vệ thông tin cá nhân của website. Việc thu thập và sử dụng thông tin của mỗi Thành viên chỉ được thực hiện khi có sự đồng ý của khách hàng đó trừ những trường hợp pháp luật có quy định khác.
-        </li>
-        <li>
-          Không sử dụng, không chuyển giao, cung cấp hay tiết lộ cho bên thứ 3 nào về thông tin cá nhân của Thành viên khi không có sự cho phép đồng ý từ Thành viên.
-        </li>
-        <li>
-          Trong trường hợp máy chủ lưu trữ thông tin bị hacker tấn công dẫn đến mất mát dữ liệu cá nhân Thành viên, website sẽ có trách nhiệm thông báo vụ việc cho cơ quan chức năng điều tra xử lý kịp thời và thông báo cho Thành viên được biết.
-        </li>
-        <li>
-          Bảo mật tuyệt đối mọi thông tin giao dịch trực tuyến của Thành viên bao gồm thông tin hóa đơn kế toán chứng từ số hóa tại khu vực dữ liệu trung tâm an toàn cấp 1 của website.
-        </li>
-        <li>
-          Ban quản trị chúng tôi yêu cầu các cá nhân khi đăng ký/mua hàng là Thành viên, phải cung cấp đầy đủ thông tin cá nhân có liên quan như: họ và tên, địa chỉ liên lạc, email, số chứng minh nhân dân, điện thoại, số tài khoản, số thẻ thanh toán …., và chịu trách nhiệm về tính pháp lý của những thông tin trên. Ban quản trị website không chịu trách nhiệm cũng như không giải quyết mọi khiếu nại có liên quan đến quyền lợi của Thành viên đó nếu xét thấy tất cả thông tin cá nhân của Thành viên đó cung cấp khi đăng ký ban đầu là không chính xác.
-        </li>
-        <li>
-          Ban quản trị khuyến cáo Thành viên nên bảo mật các thông tin liên quan đến mật khẩu truy xuất của mình và không nên chia sẻ với bất kỳ người nào khác. Nếu sử dụng máy tính chung nhiều người, Thành viên nên đăng xuất, hoặc thoát hết tất cả cửa sổ Website đang mở.
-        </li>
-      </ol>
-      
-      <ion-card-title>CHÍNH SÁCH BẢO MẬT THÔNG TIN</ion-card-title>
+    <h3>1. Thông tin cá nhân của Thành viên</h3>
+    <p>Thông tin cá nhân của Thành viên trên website được chúng tôi cam kết bảo mật tuyệt đối theo chính sách bảo vệ thông tin cá nhân của website. Việc thu thập và sử dụng thông tin của mỗi Thành viên chỉ được thực hiện khi có sự đồng ý của khách hàng đó trừ những trường hợp pháp luật có quy định khác.</p>
 
-      <h3>Mục đích và phạm vi thu thập</h3>
-      <p>
-        Để truy cập và sử dụng một số dịch vụ tại website, quý khách có thể được yêu cầu đăng ký với chúng tôi thông tin cá nhân (thành viên), bao gồm: Email, Họ tên, Số ĐT liên lạc, địa chỉ, công ty, tên đăng nhập, mật khẩu.
-      </p>
-      <p>
-        Chúng tôi cũng thu thập thông tin về số lần viếng thăm, bao gồm số trang quý khách xem, số links (liên kết) bạn click, những thông tin khác liên quan đến việc kết nối đến website và các thông tin mà trình duyệt Web (Browser) quý khách sử dụng mỗi khi truy cập vào website của chúng tôi gồm: địa chỉ IP, loại Browser, ngôn ngữ sử dụng, thời gian và những địa chỉ mà Browser truy xuất đến.
-      </p>
+    <h3>2. Không sử dụng thông tin cá nhân</h3>
+    <p>Không sử dụng, không chuyển giao, cung cấp hay tiết lộ cho bên thứ 3 nào về thông tin cá nhân của Thành viên khi không có sự cho phép đồng ý từ Thành viên.</p>
 
-      <h3>Phạm vi sử dụng thông tin</h3>
-      <p>
-        Mục đích sử dụng thông tin Thành viên cung cấp để:
-      </p>
-      <ul>
-        <li>Hỗ trợ khách hàng khi mua sản phẩm</li>
-        <li>Giải đáp thắc mắc khách hàng</li>
-        <li>Cung cấp cho khách hàng thông tin mới nhất trên Website của chúng tôi, thực hiện các khảo sát khách hàng, các hoạt động quảng bá liên quan đến các sản phẩm và dịch vụ của website nếu quý khách đăng kí nhận email thông báo.</li>
-      </ul>
+    <h3>3. Trách nhiệm khi mất mát dữ liệu</h3>
+    <p>Trong trường hợp máy chủ lưu trữ thông tin bị hacker tấn công dẫn đến mất mát dữ liệu cá nhân Thành viên, website sẽ có trách nhiệm thông báo vụ việc cho cơ quan chức năng điều tra xử lý kịp thời và thông báo cho Thành viên được biết.</p>
 
-      <h3>Thời gian lưu trữ thông tin</h3>
-      <p>
-        Dữ liệu cá nhân của Thành viên sẽ được lưu trữ cho đến khi có yêu cầu hủy bỏ hoặc tự Thành viên đăng nhập và thực hiện hủy bỏ. Còn lại trong mọi trường hợp thông tin cá nhân Thành viên sẽ được bảo mật trên máy chủ của website.
-      </p>
+    <h3>4. Bảo mật thông tin giao dịch</h3>
+    <p>Bảo mật tuyệt đối mọi thông tin giao dịch trực tuyến của Thành viên bao gồm thông tin hóa đơn kế toán chứng từ số hóa tại khu vực dữ liệu trung tâm an toàn cấp 1 của website.</p>
 
-      <h3>Địa chỉ của đơn vị thu thập và quản lý thông tin cá nhân</h3>
-      <p>Harumart, [Add Your Company Address Here]</p>
+    <h3>5. Thông tin cung cấp bởi Thành viên</h3>
+    <p>Ban quản trị chúng tôi yêu cầu các cá nhân khi đăng ký/mua hàng là Thành viên, phải cung cấp đầy đủ thông tin cá nhân có liên quan như: họ và tên, địa chỉ liên lạc, email, số chứng minh nhân dân, điện thoại, số tài khoản, số thẻ thanh toán …., và chịu trách nhiệm về tính pháp lý của những thông tin trên. Ban quản trị website không chịu trách nhiệm cũng như không giải quyết mọi khiếu nại có liên quan đến quyền lợi của Thành viên đó nếu xét thấy tất cả thông tin cá nhân của Thành viên đó cung cấp khi đăng ký ban đầu là không chính xác.</p>
 
-      <h3>Phương tiện và công cụ để người dùng tiếp cận và chỉnh sửa dữ liệu cá nhân của mình</h3>
-      <p>
-        Thành viên có quyền tự kiểm tra, cập nhật, điều chỉnh hoặc hủy bỏ thông tin cá nhân của mình bằng cách đăng nhập vào tài khoản và chỉnh sửa thông tin cá nhân hoặc yêu cầu website thực hiện việc này.
-      </p>
-      <p>
-        Thành viên có quyền gửi khiếu nại về người bán đến Ban quản trị của website tại địa chỉ: <a href="mailto:harumartad@gmail.com">harumartad@gmail.com</a> hoặc đường dây nóng 024.3993.9179 khi tiếp nhận những phản hồi này chúng tôi sẽ xác nhận lại thông tin, trường hợp đúng như phản ánh của Thành viên tùy theo mức độ, và sẽ có những biện pháp xử lý kịp thời.
-      </p>
+    <h3>6. Khuyến cáo bảo mật</h3>
+    <p>Ban quản trị khuyến cáo Thành viên nên bảo mật các thông tin liên quan đến mật khẩu truy xuất của mình và không nên chia sẻ với bất kỳ người nào khác. Nếu sử dụng máy tính chung nhiều người, Thành viên nên đăng xuất, hoặc thoát hết tất cả cửa sổ Website đang mở.</p>
+
+    <h2>CHÍNH SÁCH BẢO MẬT THÔNG TIN</h2>
+    <h3>1. Mục đích và phạm vi thu thập</h3>
+    <p>Để truy cập và sử dụng một số dịch vụ tại website, quý khách có thể được yêu cầu đăng ký với chúng tôi thông tin cá nhân (thành viên), bao gồm: Email, Họ tên, Số ĐT liên lạc, địa chỉ, công ty, tên đăng nhập, mật khẩu.</p>
+
+    <h3>2. Phạm vi sử dụng thông tin</h3>
+    <p>Mục đích sử dụng thông tin Thành viên cung cấp để: Hỗ trợ khách hàng khi mua sản phẩm, giải đáp thắc mắc khách hàng, cung cấp cho khách hàng thông tin mới nhất trên Website của chúng tôi, thực hiện các khảo sát khách hàng, các hoạt động quảng bá liên quan đến các sản phẩm và dịch vụ của website nếu quý khách đăng kí nhận email thông báo.</p>
+
+    <h3>3. Thời gian lưu trữ thông tin</h3>
+    <p>Dữ liệu cá nhân của Thành viên sẽ được lưu trữ cho đến khi có yêu cầu hủy bỏ hoặc tự Thành viên đăng nhập và thực hiện hủy bỏ. Còn lại trong mọi trường hợp thông tin cá nhân Thành viên sẽ được bảo mật trên máy chủ của website.</p>
+
+    <h3>4. Địa chỉ của đơn vị thu thập và quản lý thông tin cá nhân</h3>
+
+    <h3>5. Phương tiện và công cụ để người dùng tiếp cận và chỉnh sửa dữ liệu cá nhân của mình</h3>
+    <p>Thành viên có quyền tự kiểm tra, cập nhật, điều chỉnh hoặc hủy bỏ thông tin cá nhân của mình bằng cách đăng nhập vào tài khoản và chỉnh sửa thông tin cá nhân hoặc yêu cầu website thực hiện việc này. Thành viên có quyền gửi khiếu nại về người bán đến Ban quản trị của website tại địa chỉ: harumartad@gmail.com hoặc đường dây nóng 024.3993.9179 khi tiếp nhận những phản hồi này chúng tôi sẽ xác nhận lại thông tin, trường hợp đúng như phản ánh của Thành viên tùy theo mức độ, và sẽ có những biện pháp xử lý kịp thời.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
