hide shipt type is fast

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -67,10 +67,10 @@
         <ion-label>Giao thường</ion-label>
         <ion-radio slot="start" [value]="'normal'"></ion-radio>
       </ion-item>
-      <ion-item>
+      <!-- <ion-item>
         <ion-label>Hoả tốc</ion-label>
         <ion-radio slot="start" [value]="'fast'"></ion-radio>
-      </ion-item>
+      </ion-item> -->
     </ion-row>
     <ion-row>
       <ion-text class="ship-fee"><span>Phí vận chuyển: {{shipFee | currency:'VND':'symbol'}}</span></ion-text>
